--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,2 @@
 
-@import "blocks/choice.scss"
-@import "normalize.scss"
+@import "normalize.scss", "blocks/choice.scss", "blocks/page-header.scss", "blocks/how-works.scss", "blocks/example.scss", "blocks/page-footer.scss"
