Исправляет npm test

--- a/source/sass/blocks/how-works.scss
+++ b/source/sass/blocks/how-works.scss
@@ -12,7 +12,7 @@
   width: 176px;
   height: 48px;
   color: #444444;
-  font-family: "Arial MT";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -28,7 +28,7 @@
 h2 {
   height: 38px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 60px;
