--- a/source/sass/blocks/choice.scss
+++ b/source/sass/blocks/choice.scss
@@ -1,6 +1,6 @@
 /* мобильная версия */
 .page-container {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
@@ -16,7 +16,7 @@
 .choice__slogan {
   height: 74px;
   color: #ffffff;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
@@ -28,7 +28,7 @@
   width: 198px;
   height: 16px;
   color: #ffffff;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
@@ -48,7 +48,7 @@ h1 {
   width: 133px;
   height: 15px;
   color: #ffffff;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -90,7 +90,7 @@ ul {
   width: 108px;
   height: 24px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 37.02px;
@@ -106,7 +106,7 @@ ul {
 .choice__list-title2 {
   height: 21px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 37.02px;
@@ -123,7 +123,7 @@ ul {
   width: 223px;
   height: 86px;
   color: #444444;
-  font-family: "Arial MT";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -141,7 +141,7 @@ hr {
   width: 85px;
   height: 15px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
