--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -7,7 +7,7 @@
 .example__title {
   height: 37px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 60px;
@@ -19,7 +19,7 @@
   width: 266px;
   height: 103px;
   color: #444444;
-  font-family: "Arial MT";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -30,7 +30,7 @@
 .example__cost {
   height: 14px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -48,7 +48,7 @@
 .example__text1 {
   height: 15px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -65,7 +65,7 @@
   width: 40px;
   height: 15px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
