--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -6,7 +6,7 @@
   margin: 0;
   height: 57px;
   color: #111111;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -18,7 +18,7 @@
   margin: 0;
   height: 53px;
   color: #444444;
-  font-family: "Arial MT";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -69,7 +69,7 @@
   //width: 112px;
   height: 16px;
   color: #444444;
-  font-family: "Arial MT";
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
